--- a/uControl/uControlAndroid/Properties/AndroidManifest.xml
+++ b/uControl/uControlAndroid/Properties/AndroidManifest.xml
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.fls-hackathon.ucontrol">
-	<uses-sdk android:minSdkVersion="16" />
-	<application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name" android:theme="@android:style/Theme.Holo">
-	</application>
+	<uses-sdk android:minSdkVersion="19" />
+	<application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name" android:theme="@android:style/Theme.Holo"></application>
 </manifest>
