--- a/uControl/uControlAndroid/packages.config
+++ b/uControl/uControlAndroid/packages.config
@@ -3,6 +3,9 @@
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="monoandroid60" />
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="monoandroid60" />
   <package id="NETStandard.Library" version="1.6.0" targetFramework="monoandroid60" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="monoandroid60" />
+  <package id="SQLite.Net-PCL" version="3.0.5" targetFramework="monoandroid60" />
+  <package id="SQLiteNetExtensions" version="1.3.0" targetFramework="monoandroid60" />
   <package id="sqlite-net-pcl" version="1.3.1" targetFramework="monoandroid60" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.2" targetFramework="monoandroid60" />
   <package id="SQLitePCLRaw.core" version="1.1.2" targetFramework="monoandroid60" />
