--- a/uControl/uControlAndroid/uControlAndroid.csproj
+++ b/uControl/uControlAndroid/uControlAndroid.csproj
@@ -68,7 +68,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\ControlType.cs" />
-    <Compile Include="Common\ListItem.cs" />
     <Compile Include="Entities\Control.cs" />
     <Compile Include="Entities\GamePad.cs" />
     <Compile Include="MainActivity.cs" />
@@ -77,7 +76,7 @@
     <Compile Include="Accelerometer\Accelerometer.cs" />
     <Compile Include="Accelerometer\AccelerometerListener.cs" />
     <Compile Include="Network\NetWorkHelper.cs" />
-    <Compile Include="Services\SetupService.cs" />
+    <Compile Include="Services\GamePadService.cs" />
     <Compile Include="UIDetails\UIHelper.cs" />
     <Compile Include="SetupActivity.cs" />
     <Compile Include="SimulationListener.cs" />
